--- a/templates/groups/card.html.twig
+++ b/templates/groups/card.html.twig
@@ -1,4 +1,8 @@
-<a href="{{ path('group_main') }}" class="card">
-    <i class="ti ti-users-group" style='font-size: 8rem;'></i>
-    <h3>Grupos</h3>
+<a href="{{ path('group_main') }}" class="card card-group">
+    <div class="card-icon">
+        <i class="ti ti-users-group" style='font-size: 8rem;'></i>
+    </div>
+    <div class="card-text">
+        <h3>Grupos</h3>
+    </div>
 </a>
