--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -10,7 +10,7 @@
         </ul>
         <ul>
             <li>
-                <a href="{{ path('main') }}">CommunWheels</a>
+                <a href="{{ path('main') }}"><img src="{{ asset('images/LogoCommunWheelsWhite.png') }}" alt="Logo">CommunWheels</a>
             </li>
             {% if app.user %}
                 <li class="hideOnMobile">
