--- a/templates/notify/card.html.twig
+++ b/templates/notify/card.html.twig
@@ -1,4 +1,8 @@
-<a href="{{ path('notify_main') }}" class="card">
-    <i class="ti ti-bell" style='font-size: 8rem;'></i>
-    <h3>Notificar</h3>
+<a href="{{ path('notify_main') }}" class="card card-notify">
+    <div class="card-icon">
+        <i class="ti ti-bell" style='font-size: 8rem;'></i>
+    </div>
+    <div class="card-text">
+        <h3>Notificar</h3>
+    </div>
 </a>
