--- a/templates/users/card.html.twig
+++ b/templates/users/card.html.twig
@@ -1,4 +1,8 @@
-<a href="{{ path('driver_main') }}" class="card">
-    <i class="ti ti-users" style='font-size: 8rem;'></i>
-    <h3>Usuarios</h3>
+<a href="{{ path('driver_main') }}" class="card card-user">
+    <div class="card-icon">
+        <i class="ti ti-users"></i>
+    </div>
+    <div class="card-text">
+        <h3>Usuarios</h3>
+    </div>
 </a>
