--- a/templates/users/card_personal.html.twig
+++ b/templates/users/card_personal.html.twig
@@ -1,4 +1,8 @@
-<a href="{{ path('driver_mod', {'id': app.user.driver.id, 'redirect': app.request.uri}) }}" class="card">
+<a href="{{ path('driver_mod', {'id': app.user.driver.id, 'redirect': app.request.uri}) }}" class="card card-data">
+    <div class="card-icon">
     <i class="ti ti-id" style='font-size: 8rem;'></i>
+    </div>
+    <div class="card-text">
     <h3>Datos personales</h3>
+    </div>
 </a>
