--- a/templates/schedule/card.html.twig
+++ b/templates/schedule/card.html.twig
@@ -1,4 +1,8 @@
-<a href="{{ path('schedule_main') }}" class="card">
-    <i class="ti ti-clock-hour-1" style='font-size: 8rem;'></i>
-    <h3>Horario</h3>
+<a href="{{ path('schedule_main') }}" class="card card-schedule">
+    <div class="card-icon">
+        <i class="ti ti-clock-hour-1" style='font-size: 8rem;'></i>
+    </div>
+    <div class="card-text">
+        <h3>Horario</h3>
+    </div>
 </a>
