--- a/public/css/login.css
+++ b/public/css/login.css
@@ -26,7 +26,7 @@ body {
     height: 100%;
     background: linear-gradient(270deg, var(--back-color), var(--original-back-color));
     background-size: 400% 400%;
-    animation: gradientAnimation 15s ease infinite;
+    animation: gradientAnimation 30s linear infinite;
 }
 
 @keyframes gradientAnimation {
