--- a/templates/notify/card.html.twig
+++ b/templates/notify/card.html.twig
@@ -3,6 +3,6 @@
         <i class="ti ti-bell" style='font-size: 8rem;'></i>
     </div>
     <div class="card-text">
-        <h3>Notificar</h3>
+        <h3>Notificaciones</h3>
     </div>
 </a>
