--- a/templates/users/main.html.twig
+++ b/templates/users/main.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <div class="container">
+    <div class="card-grid">
         <div class="button_container">
             <a href="{{ path('driver_new') }}" class="primaryButton"><i class="ti ti-plus"></i>Nuevo conductor</a>
         </div>
