--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -18,7 +18,7 @@ body{
     font-size: large;
 }
 .container{
-    height: 80vh;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
