--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -49,7 +49,7 @@ body {
     color: var(--back-color);
 }
 
-.navbar li:first-child {
+.navbar li:nth-child(4) {
     margin-right: auto;
 }
 
@@ -116,7 +116,9 @@ body {
     .hideOnMobile {
         display: none;
     }
-
+    .navbar li:nth-child(1) {
+        margin-right: auto;
+    }
     .menuButton {
         display: flex;
     }
